--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="./task-1.html">task-1</a></li>
-      <li><a href="./task-2.html">task-2</a></li>
-      <li><a href="./task-3.html">task-3</a></li>
-      <li><a href="./task-4.html">task-4</a></li>
-      <li><a href="./task-5.html">task-5</a></li>
-      <li><a href="./task-6.html">task-6</a></li>
-    </ul>
+    <ul class="gallery"></ul>
   </body>
 </html>
