--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <ul class="gallery"></ul>
-    <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
-    <script src="./js/gallery.js"></script>
+    <div class="conteiner">
+      <ul class="gallery"></ul>
+      <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
+      <script src="./js/gallery.js"></script>
+    </div>
   </body>
 </html>
